plugins {
    id 'org.jetbrains.kotlin.jvm' version '1.7.10'
    id 'java'
}

group 'org.hydev.csc207'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
    mavenCentral()
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(18))
    }
}


dependencies {
    implementation "org.jetbrains.kotlin:kotlin-stdlib"

    // Apache HTTP Client
    // https://mvnrepository.com/artifact/org.apache.httpcomponents.client5/httpclient5-fluent
    implementation 'org.apache.httpcomponents.client5:httpclient5-fluent:5.2-beta1'

    // OKHTTP HTTP Client
    // https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp
    implementation 'com.squareup.okhttp3:okhttp:4.10.0'

    // Ktor HTTP Client
    implementation "io.ktor:ktor-client-core:2.1.1"
    implementation "io.ktor:ktor-client-cio:2.1.1"

    // Github API Client
    // https://mvnrepository.com/artifact/org.kohsuke/github-api
    implementation 'org.kohsuke:github-api:1.308'

    // Json parser
    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core
    implementation 'com.fasterxml.jackson.core:jackson-core:2.14.0-rc1'

    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.14.0-rc1'

    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.0-rc1'

    // https://mvnrepository.com/artifact/com.google.code.gson/gson
    implementation 'com.google.code.gson:gson:2.9.1'

    // YAML parser
    // https://mvnrepository.com/artifact/org.yaml/snakeyaml
    implementation group: 'org.yaml', name: 'snakeyaml', version: '1.33'

    // Kotlin Coroutines
    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
}

test {
    useJUnitPlatform()
}
